--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
@@ -3,72 +3,70 @@
 Differential geometry is the study of principal bundles and their automorphisms. Principal bundles are bundles of torsors, so we start there.
 
 \subsection{Torsors}
+\label{subsec:torsors}
+We will review some definitions and facts, drawing on the excellent resource \cite{buchholtz2023central}.
 
 \begin{mydef}
-Let \( G \) be a group with identity element \( e \) (with the usual classical structure and properties). A \defemph{\( G \)-set} is a set \( X \) equipped with a homomorphism \( \phi:(G,e)\to\Aut(X) \). If in addition we have a term
+Let \( G \) be a group with identity element \( e \) (with the usual classical structure and properties). A \defemph{\( G \)-set} is a set \( X \) equipped with a homomorphism \( \phi:(G,e)\to\Aut(X) \). If in addition we have a term of type
 \[ 
-\mathsf{is\_torsor}:||X||_{-1}\times \pit{x:X}\mathsf{is\_equiv}(\phi(-,x):(G,e)\to (X,x))
-\] then we call this data a \defemph{\( G \)-torsor}. Denote the type of \( G \)-torsors by \( BG \).
+\mathsf{is\_torsor}(X,\phi)\defeq ||X||_{-1}\times \pit{x:X}\mathsf{is\_equiv}(\phi(-,x):(G,e)\to (X,x))
+\] then we say \( (X,\phi) \) is a \defemph{\( G \)-torsor}. Denote the type of \( G \)-torsors by \( BG \). Denote the \( G \)-torsor given by \( G \) itself under right-multiplication by \( \reg{G} \).
 \end{mydef}
 
-If \( (X,\phi),(Y,\psi):BG \) then a \( G \)-equivariant map is a function \( f:X\to Y \) such that \( f(\phi(g,x))=\psi(g,f(x)) \). Denote the type of \( G \)-equivariant maps by \( X\to_G Y \).
+A \( G \)-equivariant map is a function \( f:X\to Y \) such that \( f(\phi(g,x))=\psi(g,f(x)) \). Denote the type of \( G \)-equivariant maps by \( X\to_G Y \).
 
 \begin{mylemma}
-There is a natural equivalence \( (X=_{BG}Y) \simeq (X\to_G Y) \).\qed
+(\cite{buchholtz2023central} Lemma 5.2). If \( (X,\phi),(Y,\psi):BG \) then there is a natural equivalence \( (X=_{BG}Y) \simeq (X\to_G Y) \).\qed
 \end{mylemma}
 
-Denote by \( * \) the torsor given by \( G \) actions on its underlying set by left-translation. This serves as a basepoint for \( BG \) and we have a group isomorphism \( \Omega BG\simeq G \).
-
 \begin{mylemma}
-A \( G \)-set \( (X,\phi) \) is a \( G \)-torsor if and only if there merely exists a \( G \)-equivariant equivalence \( *\to_G X \).\qed
+(\cite{buchholtz2023central} Proposition 5.4). A \( G \)-set \( (X,\phi) \) is a \( G \)-torsor if and only if there merely exists a \( G \)-equivariant equivalence \( \reg{G}\to_G X \).\qed
 \end{mylemma}
 
 \begin{mycor}
-The pointed type \( (BG,*) \) is a \( \K(G,1) \).\qed
+(\cite{buchholtz2023central} Corollary 5.5). The pointed type \( (BG,*) \) is a \( \K(G,1) \).\qed
 \end{mycor}
 
 In particular, to classify principal \( S^1 \)-bundles we map into the space \( \K(S^1, 1) \), a type of torsors of the circle. Since \( S^1 \) is a \( \Kzo \), we have \( \K(S^1,1)\simeq\Kzt \).
 
 \subsection{Bundles of Eilenberg-Mac Lane spaces}
 
-We find it illuminating to look also at the slightly more general classifying space of \( \Kzo \)-bundles, that is bundles whose fiber are equivalent to \( \Kzo \). We can understand very well when these are in fact bundles of circle torsors, which will in turn shed light on orientation in this setting. 
-
-We will follow Scoccola\cite{sco}. We will state the definitions and theorems for a general \( \K(G,n) \) but we will be focusing on \( n=1 \) in this note.
+To construct maps into \( \Kzt \) we will follow Scoccola\cite{sco}. When can a map into a connected component of the universe be factored through an Eilenberg-Mac Lane space?
 
 \begin{mydef}
-Let \( \EM(G,n)\defeq \BAut(\K(G,n))\defeq \sit{Y:\uni}||Y\simeq \K(G,n)||_{-1}\). A \defemph{\( \K(G,n) \)-bundle} on a type \( M \) is the fiber of a map \( M\to\EM(G,n) \).
+Let \( G \) be a group. Let \( \EM(G,n)\defeq \BAut(\K(G,n))\defeq \sit{Y:\uni}||Y\simeq \K(G,n)||_{-1}\) be the connected component of \( \uni \) containing \( \K(G,n) \). A \defemph{\( \K(G,n) \)-bundle} on a type \( M \) is a map \( M\to\EM(G,n) \).
 \end{mydef}
 
-Scoccola uses two self-maps on the universe: suspension followed by \( (n+1) \)-truncation \( ||\Sigma||_{n+1} \) and forgetting a point \( F_\bullet \) to form the composition 
+Scoccola uses 
+\begin{itemize}
+\item suspension \( \susp:\EM(G,n)\to\EM_{\bullet\bullet}(G,n) \) (see \cite{hottbook} §6.5), which maps into types with two points (denoted by the bullets),
+\item \( (n+1) \)-truncation (see \cite{hottbook} §7.3),
+\item forgetting a point \( F_\bullet:\EM_{\bullet\bullet}(G,n)\to \EM_{\bullet}(G,n) \),
+\end{itemize}
+to form the composition
 \[ 
-\EM(G,n)\xrightarrow[]{||\Sigma||_{n+1}} \EM_{\bullet\bullet}(G,n+1)\xrightarrow[]{F_\bullet}\EMp(G,n+1)
+\EM(G,n)\xrightarrow[]{||\susp||_{n+1}} \EM_{\bullet\bullet}(G,n+1)\xrightarrow[]{F_\bullet}\EMp(G,n+1)
 \]
-from types to types with two points (north and south), to pointed types (by forgetting the south point).
+from types to types with two points (north and south), then to pointed types (by forgetting the south point).
 
 \begin{mydef}
-Given \( f:M\to\EM(G,n) \), the \defemph{associated action of \( M \) on \( G \)}, denoted by \( f_\bullet \) is defined to be \( f_\bullet=F_\bullet\circ||\Sigma||_{n+1}\circ f \).
+Given \( f:M\to\EM(G,n) \), the \defemph{associated action of \( M \) on \( G \)}, denoted by \( f_\bullet \) is defined to be \( f_\bullet=F_\bullet\circ||\susp||_{n+1}\circ f \).
 \end{mydef}
 
 \begin{mythm}
-(Scoccola\cite{sco} Proposition 2.39). A \( \K(G,n) \) bundle \( f:M\to\EM(G,n) \) is equivalent to a map in \( M\to\K(G,n+1) \), and so is a principal fibration, if and only if the associated action \( f_\bullet \) is contractible.
+\label{thm:sco}
+(Scoccola\cite{sco} Proposition 2.39). A \( \K(G,n) \) bundle \( f:M\to\EM(G,n) \) factors through a map \( M\to\K(G,n+1) \), and so is a principal fibration, if and only if the associated action \( f_\bullet \) is merely homotopic to a constant map.
 \end{mythm}
 
-Let's relate this to \emph{orientation}. Note that the obstruction in the theorem is about a map into \( \EMp(G,n+1) \) and further note that \( \EMp(G,n)\simeq \K(\Aut G,1) \) (independent of \( n \)). The theorem says that the data of a map into \( \EM(G,n) \) factors into data about a map into \( \K(G,n+1) \) and one into \( \K(\Aut G,1) \). Informally, \( \EM(G,n) \) is a little too large to be a \( K(G,n+1) \), as it includes data about automorphisms of \( G \).
-
-In the special case of \( \EMzo \) the conditions of the theorem are met when \( f_\bullet:M\to\K(\Aut \zz, 1) \) is contractible. \( \Aut\zz \) consists of the \( \zz/2\zz \) worth of outer automorphisms given by multiplication by \( \pm 1 \). If we look at the fiber sequence
-\[ 
-\K(S^1, 1)\to \BAut S^1\to \K(\Aut \zz, 1)
-\] we see the automorphisms of the circle as an extension of the group of automorphisms that are homotopic to the identity (which are the torsorial actions) by the group that sends the loop in \( S^1 \) to its inverse. This is another way to see that a map \( f:M\to \BAut S^1\simeq \EMzo \) factors through \( \K(S^1, 1)\simeq \Kzt \) if and only if the composition to \( \K(\Aut\zz,1) \) is trivial. This amounts to a choice of loop-direction for all the circles, and so deserves the name ``\( f \) is \emph{oriented}.'' In addition the map \( \BAut S^1\to \K(\Aut \zz, 1) \) deserves to be called the first Stiefel-Whitney class of \( f \), and the requirement here is that it vanishes. This point of view is discussed in Schreiber\cite{dcct} (starting with Example 1.2.138) and in Myers\cite{myersgood}.
-
 \begin{mynote}
-Bundles of oriented mere circles are principal, but this fact does not hold for bundles of higher-dimensional spheres. Since this note will focus on 2-dimensional oriented manifolds we will be making use of this coincidence.
+Iterating the loop map gives the isomorphism \( \loopy^{(n+1)}:\EMp(G,n+1)\simeq \K(\Aut G,1) \) (see \cite{sco} Lemma 2.7). Theorem~\ref{thm:sco} therefore says that the map \( f \) factors through \( \K(G,n+1) \) if and only if the map into \( \K(\Aut G,1) \) is homotopic to a constant. In the case of \( G=\zz \), the map \( f_\bullet:M\to \K(\Aut \zz, 1) \) deserves to be called the first Stiefel-Whitney class of \( f \) and one can interpret its triviality as \emph{orientability}. . This point of view is discussed in Schreiber\cite{dcct} (starting with Example 1.2.138) and in Myers\cite{myersgood}.
 \end{mynote}
 
 \subsection{Pathovers}
 \label{sec:pathovers}
-Suppose we have \( T:M\to\uni \) and \( P\defeq\sit{x:M}Tx \). We adopt a convention of naming objects in \( M \) with Latin letters, and the corresponding structures in \( P \) with Greek letters. Recall that if \( p:a=_M b \) then \( T \) acts on \( p \) with what's called the \emph{action on paths}, denoted \( \ap(T)(p):Ta=Tb \). This is a path in the codomain, which in this case is a type of types. Type theory also provides a function called \emph{transport}, denoted \( \tr(p):Ta\to Tb \) which acts on the fibers of \( P \). \( \tr(p) \) is a function, acting on the terms of the types \( Ta \) and \( Tb \), and univalence tells us this is the isomorphism corresponding to \( \ap(T)(p) \).
+Here we will recall basic facts from homotopy type theory. See for example \cite{hottbook} or \cite{egbert}. Suppose we have \( T:M\to\uni \) and \( P\defeq\sit{x:M}Tx \). We adopt a convention of naming objects in \( M \) with Latin letters, and the corresponding structures in \( P \) with Greek letters. Recall that if \( p:a=_M b \) then \( T \) acts on \( p \) with what's called the \emph{action on paths}, denoted \( \ap(T)(p):Ta=Tb \) (\cite{hottbook} §2.2). This is a path in the codomain \( \uni \) of \( T \). Type theory also provides a function called \emph{transport}, denoted \( \tr(p):Ta\to Tb \) (\cite{hottbook} §2.3) which acts on the fibers of \( P \). \( \tr(p) \) is a function, acting on the terms of the types \( Ta \) and \( Tb \), and univalence tells us this is the isomorphism corresponding to \( \ap(T)(p) \).
 
-Type theory also tells us that paths in \( P \) are given by pairs of paths: a path \( p:a=_M b \) in the base, and a pathover \( \pi:\tr(p)(\alpha)=_{Tb}\beta \) between \( \alpha:Ta \) and \( \beta:Tb \) in the fibers. We can't directly compare \( \alpha \) and \( \beta \) since they are of different types, so we apply transport to one of them. We say \( \pi \) lies over \( p \). See Figure~\ref{fig:pathovers}.
+Type theory also tells us that paths in \( P \) are given by pairs of paths: a path \( p:a=_M b \) in the base, and a pathover \( \pi:\tr(p)(\alpha)=_{Tb}\beta \) between \( \alpha:Ta \) and \( \beta:Tb \) in the fibers (\cite{hottbook} §2.7). We can't directly compare \( \alpha \) and \( \beta \) since they are of different types, so we apply transport to one of them. We say \( \pi \) lies over \( p \). See Figure~\ref{fig:pathovers}.
 
 \begin{figure}[H]
 \centering
@@ -77,12 +75,43 @@ Type theory also tells us that paths in \( P \) are given by pairs of paths: a p
 \label{fig:pathovers}
 \end{figure}
 
-Lastly we want to recall that in the presence of a section \( X:M\to P \) there is a dependent generalization of \( \ap \) called \( \apd \): \( \apd(X)(p):\tr(p)(X(a))=X(b) \) which is a pathover between the two values of the section over the basepoints of the path \( p \).
+Given functions \( \phi,\psi:A\to B \) between two arbitrary types we can form a type family of paths \( \alpha:A\to\uni \) by \( \alpha(a)\defeq(\phi(a)=_B\psi(a)) \). Transport in this family is given by concatenation as follows (see Figure~\ref{fig:transport_family_of_paths}), where \( p:a=_A a' \) and \( q:\phi(a)=\psi(a) \) (\cite{hottbook} Theorem 2.11.3):
+\[ 
+\tr(p)(q) = \phi(p)^{-1}\cdot q\cdot \psi(p)
+\]
+which gives a path in \( \phi(a')=\psi(a') \) by connecting dots between the terms \( \phi(a'), \phi(a), \psi(a), \psi(a') \). This relates a would-be homotopy \( \phi\sim\psi \) specified at a single point, to a point at the end of a path. We will use this to help construct such homotopies.
+\begin{figure}[h]
+\centering
+\begin{tikzpicture}[
+node distance = 20mm and 20mm,
+V/.style = {circle, fill, draw=black, inner sep=1pt},
+every edge quotes/.style = {auto},
+arrow/.style={->,semithick}
+]
+\begin{scope}[nodes=V]
+  \node[label=above left:\( \phi(a) \)] (1) {};
+  \node[label=above right:\( \phi(a') \)] (2) [right=of 1]  {};
+  \node[label=below right:\( \psi(a') \)] (3) [below=of 2]  {};
+  \node[label=below left:\( \psi(a) \)] (4) [below=of 1]  {};
+  \node[label=below:\( a \)] (5) [below=of 4]  {};
+  \node[label=below:\( a' \)] (6) [below=of 3]  {};
+\end{scope}
+\draw[arrow]
+        (2)  edge[swap, "\( \phi(p)^{-1} \)"] (1)
+        (4)  edge["\( \psi(p) \)"] (3)
+        (1)  edge[swap, "\( q \)"] (4)
+        (5)  edge["\( p \)"] (6);
+\end{tikzpicture}
+\caption{Transport along \( p \) in the fibers of a family of paths. The fiber over \( a \) is \( \phi(a)=\psi(a) \) where \( \phi,\psi:A\to B \).}
+\label{fig:transport_family_of_paths}
+\end{figure}
+
+Finally, recall that in the presence of a section \( X:M\to P \) there is a dependent generalization of \( \ap \) called \( \apd \): \( \apd(X)(p):\tr(p)(X(a))=X(b) \) which is a pathover between the two values of the section over the basepoints of the path \( p \) (\cite{hottbook} Lemma 2.3.4).
 
 \subsection{The bundle of automorphisms}
 \label{sec:automorphisms}
 \begin{mydef}
-Again, suppose we have \( T:M\to\EMzo \) and \( P\defeq\sit{x:M}Tx \). Then we can form the type family \( \Aut T:M\to\uni \) given by \( \Aut T\defeq\lambda(x:M)\to (Tx=Tx) \). The total space \( \Aut P\defeq\sit{x:M}(Tx=Tx) \), which is a bundle of groups, is called the \defemph{automorphism bundle} or the \defemph{gauge bundle} and sections \( \pit{x:M}(Tx=Tx) \), which are homotopies \( T\sim T \), are called \defemph{automorphisms of \( P \)} or \defemph{gauge transformations}.
+Suppose we have \( T:M\to\EMzo \) and \( P\defeq\sit{x:M}Tx \). Then we can form the type family \( \Aut T:M\to\uni \) given by \( \Aut T(x)\defeq(Tx=Tx) \). The total space \( \Aut P\defeq\sit{x:M}(Tx=Tx) \), which is a bundle of groups, is called the \defemph{automorphism bundle} or the \defemph{gauge bundle} and sections \( \pit{x:M}(Tx=Tx) \), which are homotopies \( T\sim T \), are called \defemph{automorphisms of \( P \)} or \defemph{gauge transformations}.
 \end{mydef}
 
 If the automorphism group of the fibers is commutative then the automorphism bundle is trivial.
@@ -92,5 +121,5 @@ If the automorphism group of the fibers is commutative then the automorphism bun
 Suppose \( M \) is connected and we have a point \( m:M \). Then we have a trivialization \( \Aut P\simeq M\times (Tm=Tm) \). This is equivalent to saying the map \( \Aut T \) is equivalent to a constant map.
 \end{mylemma}
 \begin{myproof}
-We will produce a term \( \tau:\pit{x:M}((Tx=Tx)\xrightarrow[]{\simeq}(Tm=Tm)) \). Suppose we have a path \( p:x=_M m \), and define \( \tau x=\tr(p) \). Transport in the family \( \Aut T \) is given by concatenation (see \cite{hottbook} Theorem 2.11.3), i.e. \( \tr(p)(f)=T(p)^{-1}\cdot f\cdot T(p) \). To show that \( \tau \) is independent of the choice of \( p \), suppose we have \( p,q:x=_M m \). Then \( \tr(p\cdot q^{-1})=T(p\cdot q^{-1})^{-1}\cdot -\cdot T(p\cdot q^{-1}) \) which is conjugation in the commutative group \( Tx=Tx \), hence is the identity. This proves that \( \tr(p)=\tr(q) \).
+We will produce a term \( \tau:\pit{x:M}((Tx=Tx)\xrightarrow[]{\simeq}(Tm=Tm)) \). First note that \( (Tx=Tx) \) is a commutative group, as it is merely isomorphic to \( S^1=\Kzo \). Suppose we have a path \( p:x=_M m \) (which exists by connectedness), and define \( \tau x=\tr(p) \). Transport in the family \( \Aut T \) is given by concatenation (as explained in Section~\ref{sec:pathovers}), i.e. \( \tr(p)(f)=T(p)^{-1}\cdot f\cdot T(p) \). To show that \( \tau \) is independent of the choice of \( p \), suppose we have \( p,q:x=_M m \). Then \( \tr(p\cdot q^{-1})=T(p\cdot q^{-1})^{-1}\cdot -\cdot T(p\cdot q^{-1}) \) which is conjugation in the commutative group \( Tx=Tx \), hence is the identity. This proves that \( \tr(p)=\tr(q) \).\todo{is there a gap?}
 \end{myproof}
