lots more work, one gap in section 5, writing up section 6. todos are multiplying...

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
@@ -18,6 +18,8 @@ and then define in Section~\ref{sec:totals}
 \item and prove the equality of these to each other.
 \end{itemize}
 
+\todo{state all the assumptions and the main theorem}
+
 We will build up an example of all of these structures on an octahedron model of the sphere, and compute its Euler characteristic of 2. We will not, however, be supplying a separate definition of Euler characteristic so as to truly reproduce the Gauss-Bonnet and Poincaré-Hopf theorems.
 
 Once we have defined homotopical realizations of simplicial complexes in Section~\ref{sec:discrete_man}, we will focus in most of this note on dimensions 1 and 2. In dimension 1 we obtain polygons, which we prove are equivalent to \( S^1 \), and so give terms in the type \( \EMzo\defeq \sit{A:\uni}||A\simeq S^1||_1 \). We can call this component of the universe ``mere circles.'' In dimension 2 we will focus on a subset of complexes where the neighboring vertices and edges of each vertex (the vertex's ``link'') form a polygon. The homotopical realization \( \mm \) of such a complex then has a map \( \link \) from each vertex to a homotopical polygon, i.e. a map to \( \EMzo \). We do not know under what conditions this map necessarily extends to the higher cells of the realization.
