--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
@@ -29,6 +29,10 @@ A \( G \)-equivariant map is a function \( f:X\to Y \) such that \( f(\phi(g,x))
 
 In particular, to classify principal \( S^1 \)-bundles we map into the space \( \K(S^1, 1) \), a type of torsors of the circle. Since \( S^1 \) is a \( \Kzo \), we have \( \K(S^1,1)\simeq\Kzt \).
 
+Suppose we have a basepoint \( b:\Kzt \). A logical one to choose would be \( S^1:\Kzt \) itself. Following \cite{buchholtz2023central} Section~4.3, a term \( X : \Kzt \) is a torsor for the higher group \( \loopy_b(\Kzt)\defeq (b=_{\Kzt} b) \). In particular there is an action \( \alpha:(b=_{\Kzt}b)\times X\to X \), and an equivalence \( (\alpha, \pr_2) : (b=_{\Kzt}b)\times X\simto (X\times X)\).
+
+%Given a map \( f:M\to\Kzt \) from some type \( M \), the action exists over \( M \) as \( \pit{x:M}((b=_{\Kzt}b)\times f(x)\to f(x)) \).
+
 \subsection{Bundles of Eilenberg-Mac Lane spaces}
 
 To construct maps into \( \Kzt \) we will follow Scoccola\cite{sco}. When can a map into a connected component of the universe be factored through an Eilenberg-Mac Lane space?
